<resources>
    <string name="app_name">نشانک</string>
    <string name="save">ذخیره</string>
    <string name="driving_mode">رانندگی</string>
    <string name="share">ارسال</string>
    <string name="hint_destination">مقصدت کجاست؟</string>
    <string name="work">محل کار</string>
    <string name="home">خانه</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="end_trip">پایان سفر</string>
    <string name="start_trip">شروع سفر</string>
    <string name="copy_address">مثلا آدرس در حافظه کپی شد ;)</string>
    <string name="share_address">مثلا آدرس ارسال شد ;)</string>
    <string name="routing_error">خطا در مسیر یابی، لطفا مقصد را تغییر دهید.</string>
    <string name="turn_on_gps">موقعیت مکانی خود را روشن کنید</string>
    <string name="press_start_trip">روی دکمه شروع سفر کلیک کنید</string>
    <string name="seyyed_razi">سید رضی ۴۹ بعد از چهارراه اول</string>
    <string name="doctors">چهارراه دکتری کافه نون</string>
    <string name="not_found">موردی یافت نشد! :(</string>
    <string name="internet_warning">اتصال اینترنت برقرار نیست</string>
    <string name="location_notification_content">نشانک در حال مسیریابی میباشد</string>
    <string name="location_permission_rejected">مجوز مکان رد شد</string>
    <string name="post_notification_permission_rejected">مجوز ارسال اعلان رد شد</string>
    <string name="give_post_notification_permission">لطفا مجوز ارسال نوتیفیکیشن را به برنامه بدهید.</string>
</resources>