<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layoutDirection="rtl"
    tools:context=".ui.direction.DirectionFragment">

    <androidx.cardview.widget.CardView
        android:layout_margin="@dimen/_10sdp"
        app:cardCornerRadius="@dimen/_10sdp"
        app:cardBackgroundColor="@color/colorBlueBic"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/txtInstructions"
                android:textSize="@dimen/_12sdp"
                android:padding="@dimen/_10sdp"
                android:text="@string/press_start_trip"
                android:textColor="@color/white"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"/>

            <ImageView
                android:id="@+id/imgDirection"
                android:layout_marginEnd="@dimen/_5sdp"
                android:padding="@dimen/_5sdp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>

        </LinearLayout>

    </androidx.cardview.widget.CardView>

    <org.neshan.mapsdk.MapView
        android:id="@+id/map"
        android:layout_width="match_parent"
        android:layout_height="match_parent" />

    <androidx.cardview.widget.CardView
        android:id="@+id/cardGPS"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/_10sdp"
        app:cardBackgroundColor="@color/white"
        app:cardCornerRadius="@dimen/_50sdp"
        app:cardElevation="@dimen/_3sdp"
        app:layout_constraintBottom_toTopOf="@id/cardAddress"
        app:layout_constraintStart_toStartOf="parent">

    <ImageView
        android:layout_width="@dimen/_35sdp"
        android:layout_height="@dimen/_35sdp"
        android:padding="@dimen/_10sdp"
        android:src="@drawable/ic_gps" />

    </androidx.cardview.widget.CardView>

    <RelativeLayout
        android:id="@+id/cardAddress"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="@dimen/_10sdp"
        android:gravity="center"
        android:background="@drawable/bg_white_top_corner"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <ViewFlipper
            android:id="@+id/viewFlipper"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btnStart"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/colorGreen"
                android:textSize="@dimen/_14sdp"
                android:paddingHorizontal="@dimen/_50sdp"
                android:text="@string/start_trip"
                android:textStyle="bold"
                style="@style/Widget.MaterialComponents.Button.TextButton" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btnEnd"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/colorBlueBic"
                android:textSize="@dimen/_14sdp"
                android:paddingHorizontal="@dimen/_50sdp"
                android:textStyle="bold"
                android:text="@string/end_trip"
                style="@style/Widget.MaterialComponents.Button.TextButton" />

        </ViewFlipper>

    </RelativeLayout>

</androidx.constraintlayout.widget.ConstraintLayout>