<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layoutDirection="rtl"
    android:padding="16dp">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <EditText
            android:hint="@string/hint_destination"
            android:textSize="@dimen/_12sdp"
            android:textColor="@color/black"
            android:id="@+id/edtDestination"
            android:background="@drawable/bg_gray"
            android:padding="@dimen/_10sdp"
            android:maxLines="1"
            android:singleLine="true"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

        <ImageView
            android:id="@+id/imgClose"
            android:layout_width="@dimen/_50sdp"
            android:layout_height="@dimen/_30sdp"
            android:padding="@dimen/_5sdp"
            android:layout_centerVertical="true"
            android:layout_alignParentEnd="true"
            app:tint="@color/black"
            android:src="@drawable/ic_close" />

    </RelativeLayout>

    <com.google.android.material.chip.ChipGroup
        android:layout_marginTop="@dimen/_10sdp"
        android:layout_gravity="center"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

    <com.google.android.material.chip.Chip
        android:id="@+id/chipHome"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:chipBackgroundColor="@color/view_background"
        android:textAppearance="@style/CustomChipTextAppearance"
        app:chipIconSize="@dimen/_15sdp"
        app:chipStartPadding="@dimen/_10sdp"
        app:chipEndPadding="@dimen/_10sdp"
        app:chipIcon="@drawable/ic_home"
        android:text="@string/home"/>

    <com.google.android.material.chip.Chip
        android:id="@+id/chipWork"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:chipBackgroundColor="@color/view_background"
        app:chipIcon="@drawable/ic_briefcase"
        android:textAppearance="@style/CustomChipTextAppearance"
        app:chipIconSize="@dimen/_15sdp"
        app:chipStartPadding="@dimen/_10sdp"
        app:chipEndPadding="@dimen/_10sdp"
        android:text="@string/work"/>

    </com.google.android.material.chip.ChipGroup>

<!--    you should save recent addresses in room data base-->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingVertical="@dimen/_10sdp"
        android:orientation="horizontal">

        <ImageView
            android:layout_width="@dimen/_20sdp"
            android:layout_height="@dimen/_20sdp"
            android:src="@drawable/ic_history"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_10sdp"
            android:text="سید رضی ۴۹ بعد از چهارراه اول"
            android:textSize="@dimen/_12sdp"
            android:textStyle="bold" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingVertical="@dimen/_10sdp">

        <ImageView
            android:layout_width="@dimen/_20sdp"
            android:layout_height="@dimen/_20sdp"
            android:src="@drawable/ic_history" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_10sdp"
            android:text="چهارراه دکتری دانشگاه ۳۴"
            android:textSize="@dimen/_12sdp"
            android:textStyle="bold" />

    </LinearLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/destinationsRecyclerView"
        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:listitem="@layout/item_address"/>

</LinearLayout>